--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -18,6 +18,16 @@
     font-family:Avenir, Helvetica, Arial, sans-serif;
     color: #2c3e50;
 }
+.deleteItem{
+    border: 0;
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap; 
+}
 .subtitle {
     font-weight: bold;
     font-size: 1rem;
