--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,16 @@
     align-items:center;
     padding: 5px 20px;
 }
+.deleteItem{
+  border: 0;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap; 
+}
 .logo {
     width: 200px;
     max-width: 100%;
