Hompage Desktop done

--- a/src/pages/Homepage/Homepage.module.css
+++ b/src/pages/Homepage/Homepage.module.css
@@ -13,3 +13,8 @@
     width: 1px;
     white-space: nowrap; 
 }
+@media (min-width:920px) {
+    .homePageContent{
+        flex-direction: row;
+    }
+}
