--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -51,3 +51,15 @@
     background-color: #00bc77;
     color: #fff;
 }
+.signInContainer{
+    color: #2c3e50;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    column-gap: 8px;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+}
+.signInContainer:hover {
+    text-decoration: underline;
+}
