--- a/src/pages/Homepage/Homepage.module.css
+++ b/src/pages/Homepage/Homepage.module.css
@@ -1,3 +1,15 @@
+.signInContainer{
+    color: #2c3e50;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    column-gap: 8px;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+}
+.signInContainer:hover {
+    text-decoration: underline;
+}
 .homePageContent{
     display: flex;
     flex-direction: column;
