--- a/src/components/Account/Account.module.css
+++ b/src/components/Account/Account.module.css
@@ -1,45 +1,55 @@
+.accountTitle, .accountAmount, .accountAmountDescription{
+    margin:0;
+}
+.accountAmount, .transactionButton{
+    font-weight: bold;
+}
 .account{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid black;
-  background-color: #fff;
-  width: 80%;
-  margin: 0 auto;
-  flex-direction: column;
-  padding: 1.5rem;
-  box-sizing: border-box;
-  text-align: left;
-  margin-bottom: 2rem;
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-between;
+  align-items:center;
+  border:1px solid black;
+  background-color:#fff;
+  width:80%;
+  margin:0 auto;
+  padding:1.5rem;
+  box-sizing:border-box;
+  text-align:left;
+  margin-bottom:2rem;
+  font-family:Avenir, Helvetica, Arial, sans-serif;
 }
 .accountTitle{
-  margin: 0;
-  padding: 0;
-  font-size: 1rem;
-  font-weight: normal;
+  padding:0;
+  font-size:1rem;
+  font-weight:normal;
 }
 .accountAmount{
-  margin: 0;
-  font-size: 2.5rem;
-  font-weight: bold;
-  color: #2c3e50;
-}
-.accountAmountDescription{
-    margin: 0;
+  font-size:2.5rem;
+  color:#2c3e50;
 }
 .transactionButton{
-  display: block;
-  width: 100%;
-  padding: 8px;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin-top: 1rem;
-  border-color: #00bc77;
-  background-color: #00bc77;
-  color: #fff;
+  display:block;
+  width:100%;
+  padding:8px;
+  font-size:1.1rem;
+  margin-top:1rem;
+  border-color:#00bc77;
+  background-color:#00bc77;
+  color:#fff;
 }
 .accountContentWrapperCTA{
-    width: 100%;
-    flex: 1;
+   width:100%;
+   flex:1;
+}
+@media (min-width: 720px) {
+    .account {
+      flex-direction: row;
+    }
+    .accountContentWrapperCTA{
+        flex:0;
+    }
+    .transactionButton{
+        width:200px;   
+    }
 }
