--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,48 +1,49 @@
+.heroContainer, .heroContent{
+    position:relative;
+}
+.heroContent, .text {
+    font-family:Avenir, Helvetica, Arial, sans-serif;
+}
 .heroContainer{
-    background-image: url('../../assets/bank-tree.jpeg');
-    background-position: 0 -50px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 300px;
-    position: relative;
-    text-align: center;
+    background-image:url('../../assets/bank-tree.jpeg');
+    background-position:0 -50px;
+    background-size:cover;
+    background-repeat:no-repeat;
+    height:300px;
+    text-align:center;
 }
 .heroContent {
-    position: relative;
     top:2rem;
     width:200px;
-    background-color: #FFFFFF;
-    padding: 2rem;
-    text-align: left;
-    margin: 0 auto;
-    font-family:Avenir, Helvetica, Arial, sans-serif;
-    color: #2c3e50;
+    background-color:#FFFFFF;
+    padding:2rem;
+    text-align:left;
+    margin:0 auto;
+    color:#2c3e50;
 }
 .deleteItem{
-    border: 0;
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap; 
+    border:0;
+    height:1px;
+    margin:-1px;
+    overflow:hidden;
+    padding:0;
+    position:absolute;
+    width:1px;
+    white-space:nowrap; 
 }
 .subtitle {
-    font-weight: bold;
-    font-size: 1rem;
-    margin: 0;
+    font-weight:bold;
+    font-size:1rem;
+    margin:0;
 }
 .text{
-    margin-bottom: 0;
-    font-size: 0.9rem;
-    font-family:Avenir, Helvetica, Arial, sans-serif;
+    margin-bottom:0;
+    font-size:0.9rem;
 }
-
 @media (min-width:920px) {
     .heroContainer{
-        height: 400px;
-        background-position: 0% 33%;
+        height:400px;
+        background-position:0% 33%;
     }
     .heroContent{
         position:absolute;
@@ -52,10 +53,10 @@
         margin:2rem;
     }
     .subtitle {
-        font-size: 1.5rem;
+        font-size:1.5rem;
     }
     .text{
-        font-size: 1.2rem;
+        font-size:1.2rem;
     }
 
 }
