--- a/src/components/HomeItemContainer/HomeItemContainer.module.css
+++ b/src/components/HomeItemContainer/HomeItemContainer.module.css
@@ -1,14 +1,18 @@
+.homeItemContent, .homeItemIcon, .homeItemIcon, .homeItemText {
+    text-align:center;
+}
+.homeItemTitle, .homeItemText {
+    font-family:Avenir, Helvetica, Arial, sans-serif;
+}
 .homeItemContent{
     flex:1;
-    padding: 2.5rem;
-    text-align: center;
+    padding:2.5rem;
 }
 .homeItemIcon{
     width: 100px;
     border: 10px solid #00bc77;
     border-radius: 50%;
     padding: 1rem;
-    text-align: center;
 }
 .deleteItem{
     border: 0;
@@ -25,11 +29,7 @@
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: .5rem;
-    text-align: center;
-    font-family:Avenir, Helvetica, Arial, sans-serif;
 }
 .homeItemText{
     color: #2c3e50;
-    text-align: center;
-    font-family:Avenir, Helvetica, Arial, sans-serif;
 }
