--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -4,7 +4,7 @@
 .header, .signInContainer, .mainNavItem{
     font-family:Avenir, Helvetica, Arial, sans-serif;
 }
-.editButton, .signInContainer, .mainNavItem{
+.editButton, .cancelButton, .signInContainer, .mainNavItem{
     font-weight:bold;
 }
 .userMain, .title {
@@ -13,7 +13,7 @@
 .userMain, .signInContainer {
     display:flex;
 }
-.header, .editButton {
+.header, .editButton, .cancelButton {
     color:#fff;
 }
 .signInContainer, .mainNavItem {
@@ -32,7 +32,7 @@
     padding:0.67em 0;
     font-size:2rem;
 }
-.editButton{
+.editButton, .cancelButton {
   border-color:#00bc77;
   background-color:#00bc77;
   padding:10px;
@@ -49,4 +49,16 @@
 }
 .mainNavItem{
     margin-right:0.5rem;
+}
+.inputsProfileContainer, .buttonsProfileContainer{
+    display: flex;
+    justify-content: center;
+}
+.inputsProfileContainer{
+    column-gap: 20px;
+    margin:0 0 18px;
+}
+.buttonsProfileContainer{
+    column-gap: 24px;
+    margin-left: 12px;
 }
